--- a/Manifest.json
+++ b/Manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "AutoFinderStock",
+  "name": "Black & White Converter",
   "version": "1.0",
-  "description": "Hilight potentiall words for tax fraud",
+  "description": "Turns all websites black and white.",
   "permissions": [
     "activeTab"
   ],
@@ -11,6 +11,11 @@
   },
   "action": {
     "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
